fix: use inventory holders for menus and rework shulker box handling